compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_dynamic_size_shadowed_variable.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1008
expression: "\npub fn go(x) {\n  let n = 16\n  let n = 5\n  case x {\n    <<a:size(n)>> -> a\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let n = 16
  let n = 5
  case x {
    <<a:size(n)>> -> a
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  let n = 16;
  let n$1 = 5;
  if (n$1 >= 0) {
    if (x.bitSize === n$1) {
      let a = bitArraySliceToInt(x, 0, n$1, true, false);
      return a;
    } else {
      return 1;
    }
  } else {
    return 1;
  }
}
