compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_float_16_bit.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<a:float-size(16)>> -> a\n    _ -> 1.1\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<a:float-size(16)>> -> a
    _ -> 1.1
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  if (
    x.bitSize === 16 &&
    globalThis.Number.isFinite(bitArraySliceToFloat(x, 0, 16, true))
  ) {
    let a = bitArraySliceToFloat(x, 0, 16, true);
    return a;
  } else {
    return 1.1;
  }
}
